Pruebas/y.output
Grammar

    0 $accept: html_tag $end

    1 html_tag: T_Tag T_html T_TagClose head_tag body_tag T_FinalTag T_html T_TagClose

    2 head_tag: T_Tag T_head T_TagClose title_tag T_FinalTag T_head T_TagClose

    3 title_tag: T_Tag T_title T_TagClose Identificador T_FinalTag T_title T_TagClose

    4 body_tag: T_Tag T_body T_TagClose contenido T_FinalTag T_body T_TagClose

    5 contenido: h1_tag

    6 h1_tag: T_Tag T_h1 T_TagClose Identificador T_FinalTag T_h1 T_TagClose

    7 Identificador: Ident


Terminals, with rules where they appear

$end (0) 0
error (256)
T_body (258) 4
T_head (259) 2
T_html (260) 1
T_title (261) 3
T_h1 (262) 6
Ident (263) 7
T_Tag (264) 1 2 3 4 6
T_TagClose (265) 1 2 3 4 6
T_FinalTag (266) 1 2 3 4 6


Nonterminals, with rules where they appear

$accept (12)
    on left: 0
html_tag (13)
    on left: 1, on right: 0
head_tag (14)
    on left: 2, on right: 1
title_tag (15)
    on left: 3, on right: 2
body_tag (16)
    on left: 4, on right: 1
contenido (17)
    on left: 5, on right: 4
h1_tag (18)
    on left: 6, on right: 5
Identificador (19)
    on left: 7, on right: 3 6


State 0

    0 $accept: . html_tag $end

    T_Tag  shift, and go to state 1

    html_tag  go to state 2


State 1

    1 html_tag: T_Tag . T_html T_TagClose head_tag body_tag T_FinalTag T_html T_TagClose

    T_html  shift, and go to state 3


State 2

    0 $accept: html_tag . $end

    $end  shift, and go to state 4


State 3

    1 html_tag: T_Tag T_html . T_TagClose head_tag body_tag T_FinalTag T_html T_TagClose

    T_TagClose  shift, and go to state 5


State 4

    0 $accept: html_tag $end .

    $default  accept


State 5

    1 html_tag: T_Tag T_html T_TagClose . head_tag body_tag T_FinalTag T_html T_TagClose

    T_Tag  shift, and go to state 6

    head_tag  go to state 7


State 6

    2 head_tag: T_Tag . T_head T_TagClose title_tag T_FinalTag T_head T_TagClose

    T_head  shift, and go to state 8


State 7

    1 html_tag: T_Tag T_html T_TagClose head_tag . body_tag T_FinalTag T_html T_TagClose

    T_Tag  shift, and go to state 9

    body_tag  go to state 10


State 8

    2 head_tag: T_Tag T_head . T_TagClose title_tag T_FinalTag T_head T_TagClose

    T_TagClose  shift, and go to state 11


State 9

    4 body_tag: T_Tag . T_body T_TagClose contenido T_FinalTag T_body T_TagClose

    T_body  shift, and go to state 12


State 10

    1 html_tag: T_Tag T_html T_TagClose head_tag body_tag . T_FinalTag T_html T_TagClose

    T_FinalTag  shift, and go to state 13


State 11

    2 head_tag: T_Tag T_head T_TagClose . title_tag T_FinalTag T_head T_TagClose

    T_Tag  shift, and go to state 14

    title_tag  go to state 15


State 12

    4 body_tag: T_Tag T_body . T_TagClose contenido T_FinalTag T_body T_TagClose

    T_TagClose  shift, and go to state 16


State 13

    1 html_tag: T_Tag T_html T_TagClose head_tag body_tag T_FinalTag . T_html T_TagClose

    T_html  shift, and go to state 17


State 14

    3 title_tag: T_Tag . T_title T_TagClose Identificador T_FinalTag T_title T_TagClose

    T_title  shift, and go to state 18


State 15

    2 head_tag: T_Tag T_head T_TagClose title_tag . T_FinalTag T_head T_TagClose

    T_FinalTag  shift, and go to state 19


State 16

    4 body_tag: T_Tag T_body T_TagClose . contenido T_FinalTag T_body T_TagClose

    T_Tag  shift, and go to state 20

    contenido  go to state 21
    h1_tag     go to state 22


State 17

    1 html_tag: T_Tag T_html T_TagClose head_tag body_tag T_FinalTag T_html . T_TagClose

    T_TagClose  shift, and go to state 23


State 18

    3 title_tag: T_Tag T_title . T_TagClose Identificador T_FinalTag T_title T_TagClose

    T_TagClose  shift, and go to state 24


State 19

    2 head_tag: T_Tag T_head T_TagClose title_tag T_FinalTag . T_head T_TagClose

    T_head  shift, and go to state 25


State 20

    6 h1_tag: T_Tag . T_h1 T_TagClose Identificador T_FinalTag T_h1 T_TagClose

    T_h1  shift, and go to state 26


State 21

    4 body_tag: T_Tag T_body T_TagClose contenido . T_FinalTag T_body T_TagClose

    T_FinalTag  shift, and go to state 27


State 22

    5 contenido: h1_tag .

    $default  reduce using rule 5 (contenido)


State 23

    1 html_tag: T_Tag T_html T_TagClose head_tag body_tag T_FinalTag T_html T_TagClose .

    $default  reduce using rule 1 (html_tag)


State 24

    3 title_tag: T_Tag T_title T_TagClose . Identificador T_FinalTag T_title T_TagClose

    Ident  shift, and go to state 28

    Identificador  go to state 29


State 25

    2 head_tag: T_Tag T_head T_TagClose title_tag T_FinalTag T_head . T_TagClose

    T_TagClose  shift, and go to state 30


State 26

    6 h1_tag: T_Tag T_h1 . T_TagClose Identificador T_FinalTag T_h1 T_TagClose

    T_TagClose  shift, and go to state 31


State 27

    4 body_tag: T_Tag T_body T_TagClose contenido T_FinalTag . T_body T_TagClose

    T_body  shift, and go to state 32


State 28

    7 Identificador: Ident .

    $default  reduce using rule 7 (Identificador)


State 29

    3 title_tag: T_Tag T_title T_TagClose Identificador . T_FinalTag T_title T_TagClose

    T_FinalTag  shift, and go to state 33


State 30

    2 head_tag: T_Tag T_head T_TagClose title_tag T_FinalTag T_head T_TagClose .

    $default  reduce using rule 2 (head_tag)


State 31

    6 h1_tag: T_Tag T_h1 T_TagClose . Identificador T_FinalTag T_h1 T_TagClose

    Ident  shift, and go to state 28

    Identificador  go to state 34


State 32

    4 body_tag: T_Tag T_body T_TagClose contenido T_FinalTag T_body . T_TagClose

    T_TagClose  shift, and go to state 35


State 33

    3 title_tag: T_Tag T_title T_TagClose Identificador T_FinalTag . T_title T_TagClose

    T_title  shift, and go to state 36


State 34

    6 h1_tag: T_Tag T_h1 T_TagClose Identificador . T_FinalTag T_h1 T_TagClose

    T_FinalTag  shift, and go to state 37


State 35

    4 body_tag: T_Tag T_body T_TagClose contenido T_FinalTag T_body T_TagClose .

    $default  reduce using rule 4 (body_tag)


State 36

    3 title_tag: T_Tag T_title T_TagClose Identificador T_FinalTag T_title . T_TagClose

    T_TagClose  shift, and go to state 38


State 37

    6 h1_tag: T_Tag T_h1 T_TagClose Identificador T_FinalTag . T_h1 T_TagClose

    T_h1  shift, and go to state 39


State 38

    3 title_tag: T_Tag T_title T_TagClose Identificador T_FinalTag T_title T_TagClose .

    $default  reduce using rule 3 (title_tag)


State 39

    6 h1_tag: T_Tag T_h1 T_TagClose Identificador T_FinalTag T_h1 . T_TagClose

    T_TagClose  shift, and go to state 40


State 40

    6 h1_tag: T_Tag T_h1 T_TagClose Identificador T_FinalTag T_h1 T_TagClose .

    $default  reduce using rule 6 (h1_tag)
